# rust-socks

./: .gitignore  README.md  client.py  goals.md
client/: Cargo.toml
client/src/: main.rs  syntax.rs  test.rs
lnpkg/: Cargo.toml
lnpkg/src/: lib.rs  test.rs
lnpkg/tests/: lnpkgvalue.rs  test.rs
msg_templates/: Cargo.toml
msg_templates/src/: lib.rs
server/: Cargo.toml  client.py
server/src/: comm_elements.rs  main.rs  msg_templates.rs
server/tests/: test.rs
