[package]
name = "msg_templates"
version = "0.1.3"
edition = "2021"
description = "Message templates for rust-socks and its clients"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lnpkg = { git = "https://github.com/folgue02/lnpkg" }
