[package]
name = "socks"
version = "0.1.3"
edition = "2021"
description = "A project made for learning threading, concurrency and TCP sockets in Rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lnpkg = { path = "../lnpkg"}
msg_templates = { path = "../msg_templates" }
